@@ -17,6 +17,8 @@
 package net.pms.encoders;
 
 import com.sun.jna.Platform;
+
+import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
@@ -33,6 +35,32 @@ import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
 public class YoutubeDl extends FFMpegVideo {
+
+	String extractYoutubeVideoId(String url) {
+		if (url == null) {
+			return null;
+		}
+
+		if (url.contains("v=")) {
+			int start = url.indexOf("v=") + 2;
+			int end = url.indexOf("&", start);
+			return end == -1 ? url.substring(start) : url.substring(start, end);
+		}
+
+		if (url.contains("youtu.be/")) {
+			int start = url.indexOf("youtu.be/") + 9;
+			int end = url.indexOf("?", start);
+			return end == -1 ? url.substring(start) : url.substring(start, end);
+		}
+
+		if (url.contains("/embed/")) {
+			int start = url.indexOf("/embed/") + 7;
+			int end = url.indexOf("?", start);
+			return end == -1 ? url.substring(start) : url.substring(start, end);
+		}
+
+		return null;
+	}
 
 	private static final Logger LOGGER = LoggerFactory.getLogger(YoutubeDl.class);
 
@@ -75,12 +103,22 @@ public class YoutubeDl extends FFMpegVideo {
 		// Use device-specific conf
 		UmsConfiguration configuration = params.getMediaRenderer().getUmsConfiguration();
 		String filename = resource.getFileName();
+
+		String videoId = extractYoutubeVideoId(resource.getMediaURL());
+		LOGGER.debug("Launching downloader for video ID: {}", videoId);
+
 		setAudioAndSubs(resource, params);
 
 		// Build the command line
 		List<String> cmdList = new ArrayList<>();
 
-		cmdList.add(configuration.getYoutubeDlPath());
+		String downloaderPath = configuration.getYoutubeDlPath();
+		File downloaderFile = new File(downloaderPath);
+		if (!downloaderFile.exists()) {
+			LOGGER.warn("youtube-dl not found at '{}', attempting to use yt-dlp as fallback.", downloaderPath);
+			downloaderPath = "yt-dlp";
+		}
+		cmdList.add(downloaderPath);
 
 		if (params.getTimeSeek() > 0) {
 			cmdList.add("-ss");
@@ -102,7 +140,7 @@ public class YoutubeDl extends FFMpegVideo {
 			// basename of the named pipe:
 			String fifoName = String.format(
 				"youtubedl_%d_%d",
-				Thread.currentThread().getId(),
+				Thread.currentThread().threadId(),
 				System.currentTimeMillis()
 			);
 			pipe = PlatformUtils.INSTANCE.getPipeProcess(fifoName);
@@ -123,8 +161,7 @@ public class YoutubeDl extends FFMpegVideo {
 
 		if (!directPipe) {
 			ProcessWrapper mkfifoProcess = pipe.getPipeProcess();
-			pw.attachProcess(mkfifoProcess); // Clean up the mkfifo process when the transcode ends
-
+			((ProcessWrapperImpl) pw).attachProcess(mkfifoProcess); // Clean up the mkfifo process when the transcode ends
 			/**
 			 * It can take a long time for Windows to create a named pipe (and
 			 * mkfifo can be slow if /tmp isn't memory-mapped), so run this in
@@ -151,7 +188,6 @@ public class YoutubeDl extends FFMpegVideo {
 			LOGGER.error("Thread interrupted while waiting for transcode to start", e);
 			Thread.currentThread().interrupt();
 		}
-
 		return pw;
 	}
 
